# agentic-dart-collector-adapter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: tests.yml
examples/: quickstart.py
scripts/: _gen_diagrams.py  fetch-responder-binaries.sh  install.sh
src/dart_collector_adapter/: __init__.py  __main__.py  adapter.py  cli.py  hash_indexer.py  image_source.py  layout.py  manifest.py
tests/: test_adapter.py  test_cli.py  test_hash_indexer.py  test_image_source.py  test_layout.py
