[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-dart-collector-adapter"
version = "1.0.1"
description = "Convert Velociraptor IR collector output into the evidence_root layout for Agentic-DART."
authors = [{ name = "Bang Juwon (YuShin)", email = "juwon1405.jp@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    # Standard library only by design — keeps the adapter portable and audit-friendly.
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.urls]
Homepage = "https://github.com/Juwon1405/agentic-dart-collector-adapter"
Repository = "https://github.com/Juwon1405/agentic-dart-collector-adapter"
"Companion project" = "https://github.com/Juwon1405/agentic-dart"

[project.scripts]
dart-collector-adapter = "dart_collector_adapter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
